更新了19级借书名单

--- a/招新相关/借书名单/19级新生借书名单.md
+++ b/招新相关/借书名单/19级新生借书名单.md
@@ -11,9 +11,14 @@
 | 杨伍   | 电信三班 |
 | 甘鹏   | 电信三班 |
 | 贺燕   | 电信三班 |
+| 何耀祖 | 电信三班 |
+| 邬强   | 电信三班 |
+| 伍梦舟 | 电信三班 |
 | 康奇   | 计科一班 |
 | 蒋成龙 | 计科一班 |
+| 杨子希 | 网工一班 |
 | 汪子琴 | 网工二班 |
+| 李武   | 软工一班 |
 | 刘星宇 | 软工二班 |
 | 杨越   | 软工二班 |
 | 詹金辉 | 软工二班 |
