--- a/招新相关/借书名单/19级新生借书名单.md
+++ b/招新相关/借书名单/19级新生借书名单.md
@@ -2,24 +2,24 @@
 
 ---
 
-| 姓名   | 班级     |
-| ------ | -------- |
-| 雷超   | 电信三班 |
-| 郭耀辉 | 电信三班 |
-| 胡广闻 | 电信三班 |
-| 雷昊   | 电信三班 |
-| 杨伍   | 电信三班 |
-| 甘鹏   | 电信三班 |
-| 贺燕   | 电信三班 |
-| 何耀祖 | 电信三班 |1
-| 邬强   | 电信三班 |1
-| 伍梦舟 | 电信三班 |1
-| 康奇   | 计科一班 |
-| 蒋成龙 | 计科一班 |
-| 杨子希 | 网工一班 |
-| 汪子琴 | 网工二班 |
-| 李武   | 软工一班 |
-| 刘星宇 | 软工二班 |
-| 杨越   | 软工二班 |
-| 詹金辉 | 软工二班 |
-|        |          |
+| 姓名   | 班级     |0借出/1归还|
+| ------ | -------- | ----- |
+| 雷超   | 电信三班 | 0 |
+| 郭耀辉 | 电信三班 | 0 |
+| 胡广闻 | 电信三班 | 0 |
+| 雷昊   | 电信三班 | 0 |
+| 杨伍   | 电信三班 | 0 |
+| 甘鹏   | 电信三班 | 0 |
+| 贺燕   | 电信三班 | 0 |
+| 何耀祖 | 电信三班 | 1 |
+| 邬强   | 电信三班 | 1 |
+| 伍梦舟 | 电信三班 | 1 |
+| 康奇   | 计科一班 | 0 |
+| 蒋成龙 | 计科一班 | 0 |
+| 杨子希 | 网工一班 | 0 |
+| 汪子琴 | 网工二班 | 0 |
+| 李武   | 软工一班 | 0 |
+| 刘星宇 | 软工二班 | 0 |
+| 杨越   | 软工二班 | 0 |
+| 詹金辉 | 软工二班 | 0 |
+|        |          |       |
